hphp/test/slow/constant/globals-array-constant.php.expectf
Fatal error: Cannot have globals in constant declaration in %s/test/slow/constant/globals-array-constant.php on line 4